hw6 in progress

--- a/cs109a_hw6_submission.ipynb
+++ b/cs109a_hw6_submission.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -344,7 +344,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Canonical link: $"
+    "Canonical link: $\\theta = \\eta$\n",
+    "\n",
+    "Therefore, we have $\\frac{\\partial \\theta_i}{\\partial \\mu_i} \\cdot \\frac{\\partial \\mu_i}{\\partial \\eta_i} = 1$\n",
+    "\n",
+    "The answer to part (6) can be simplified as $\\nabla_{\\beta} l(\\beta) = X(Y - \\mu) = 0$"
    ]
   },
   {
@@ -386,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
