hw6 in progress

--- a/cs109a_hw6_submission.ipynb
+++ b/cs109a_hw6_submission.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,10 @@
     "from sklearn.tree import export_graphviz\n",
     "from IPython.display import Image\n",
     "from IPython.display import display\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
@@ -101,6 +104,420 @@
     "<li> What is the *false positive rate* of the fitted classifier, and how is it related to its true positive and true negative rate? Why is a classifier with high false positive rate undesirable for a cancer detection task?</li>\n",
     "</ol>\n",
     "*Hint:* You may use the `metrics.confusion_matrix` function to compute the confusion matrix for a classification model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>-1.439999999999999891e-01</th>\n",
+       "      <th>-1.429999999999999882e-01</th>\n",
+       "      <th>-1.160000000000000059e-01</th>\n",
+       "      <th>-1.029999999999999943e-01</th>\n",
+       "      <th>2.260000000000000064e-01</th>\n",
+       "      <th>2.099999999999999922e-01</th>\n",
+       "      <th>-9.799999999999999822e-01</th>\n",
+       "      <th>-7.800000000000000266e-01</th>\n",
+       "      <th>-4.739999999999999769e-01</th>\n",
+       "      <th>-4.470000000000000084e-01</th>\n",
+       "      <th>...</th>\n",
+       "      <th>9.250000000000000444e-01</th>\n",
+       "      <th>5.160000000000000142e-01</th>\n",
+       "      <th>3.439999999999999725e-01</th>\n",
+       "      <th>9.060000000000000275e-01</th>\n",
+       "      <th>-1.129999999999999893e+00</th>\n",
+       "      <th>-5.520000000000000462e-01</th>\n",
+       "      <th>5.530000000000000471e-01</th>\n",
+       "      <th>-4.169999999999999818e-01</th>\n",
+       "      <th>2.560000000000000053e-01</th>\n",
+       "      <th>0.000000000000000000e+00</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.01100</td>\n",
+       "      <td>0.138</td>\n",
+       "      <td>-0.2230</td>\n",
+       "      <td>-0.1730</td>\n",
+       "      <td>0.188</td>\n",
+       "      <td>0.284</td>\n",
+       "      <td>-0.0522</td>\n",
+       "      <td>-0.256</td>\n",
+       "      <td>0.129</td>\n",
+       "      <td>0.427</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.593</td>\n",
+       "      <td>0.452</td>\n",
+       "      <td>0.00785</td>\n",
+       "      <td>-0.533</td>\n",
+       "      <td>-0.0789</td>\n",
+       "      <td>0.705</td>\n",
+       "      <td>0.906</td>\n",
+       "      <td>0.216</td>\n",
+       "      <td>-0.0723</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.21200</td>\n",
+       "      <td>-0.313</td>\n",
+       "      <td>0.2660</td>\n",
+       "      <td>0.2320</td>\n",
+       "      <td>-1.190</td>\n",
+       "      <td>-1.150</td>\n",
+       "      <td>-1.8100</td>\n",
+       "      <td>-1.560</td>\n",
+       "      <td>-1.250</td>\n",
+       "      <td>-1.200</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.816</td>\n",
+       "      <td>1.570</td>\n",
+       "      <td>0.39400</td>\n",
+       "      <td>1.340</td>\n",
+       "      <td>-1.1800</td>\n",
+       "      <td>-2.700</td>\n",
+       "      <td>-0.926</td>\n",
+       "      <td>-2.650</td>\n",
+       "      <td>-0.0447</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.21500</td>\n",
+       "      <td>-0.184</td>\n",
+       "      <td>0.0274</td>\n",
+       "      <td>0.0494</td>\n",
+       "      <td>0.443</td>\n",
+       "      <td>0.463</td>\n",
+       "      <td>-1.0500</td>\n",
+       "      <td>-0.941</td>\n",
+       "      <td>-0.531</td>\n",
+       "      <td>-0.394</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.634</td>\n",
+       "      <td>0.111</td>\n",
+       "      <td>0.37100</td>\n",
+       "      <td>0.859</td>\n",
+       "      <td>-0.9930</td>\n",
+       "      <td>-0.492</td>\n",
+       "      <td>0.363</td>\n",
+       "      <td>0.326</td>\n",
+       "      <td>-0.0528</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.27900</td>\n",
+       "      <td>-0.197</td>\n",
+       "      <td>0.1270</td>\n",
+       "      <td>0.0973</td>\n",
+       "      <td>-0.213</td>\n",
+       "      <td>-0.150</td>\n",
+       "      <td>-1.3200</td>\n",
+       "      <td>-0.994</td>\n",
+       "      <td>-1.110</td>\n",
+       "      <td>-1.090</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.640</td>\n",
+       "      <td>0.485</td>\n",
+       "      <td>0.29500</td>\n",
+       "      <td>0.403</td>\n",
+       "      <td>-1.1200</td>\n",
+       "      <td>-0.343</td>\n",
+       "      <td>0.468</td>\n",
+       "      <td>-0.820</td>\n",
+       "      <td>0.4350</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.00922</td>\n",
+       "      <td>-0.138</td>\n",
+       "      <td>0.1690</td>\n",
+       "      <td>0.1540</td>\n",
+       "      <td>-0.391</td>\n",
+       "      <td>-0.397</td>\n",
+       "      <td>-1.6900</td>\n",
+       "      <td>-1.450</td>\n",
+       "      <td>-0.546</td>\n",
+       "      <td>-0.527</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.277</td>\n",
+       "      <td>0.699</td>\n",
+       "      <td>0.37100</td>\n",
+       "      <td>0.481</td>\n",
+       "      <td>-1.0600</td>\n",
+       "      <td>-0.526</td>\n",
+       "      <td>0.550</td>\n",
+       "      <td>-0.284</td>\n",
+       "      <td>0.1550</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 118 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   -1.439999999999999891e-01  -1.429999999999999882e-01  \\\n",
+       "0                   -0.01100                      0.138   \n",
+       "1                    0.21200                     -0.313   \n",
+       "2                    0.21500                     -0.184   \n",
+       "3                    0.27900                     -0.197   \n",
+       "4                    0.00922                     -0.138   \n",
+       "\n",
+       "   -1.160000000000000059e-01  -1.029999999999999943e-01  \\\n",
+       "0                    -0.2230                    -0.1730   \n",
+       "1                     0.2660                     0.2320   \n",
+       "2                     0.0274                     0.0494   \n",
+       "3                     0.1270                     0.0973   \n",
+       "4                     0.1690                     0.1540   \n",
+       "\n",
+       "   2.260000000000000064e-01  2.099999999999999922e-01  \\\n",
+       "0                     0.188                     0.284   \n",
+       "1                    -1.190                    -1.150   \n",
+       "2                     0.443                     0.463   \n",
+       "3                    -0.213                    -0.150   \n",
+       "4                    -0.391                    -0.397   \n",
+       "\n",
+       "   -9.799999999999999822e-01  -7.800000000000000266e-01  \\\n",
+       "0                    -0.0522                     -0.256   \n",
+       "1                    -1.8100                     -1.560   \n",
+       "2                    -1.0500                     -0.941   \n",
+       "3                    -1.3200                     -0.994   \n",
+       "4                    -1.6900                     -1.450   \n",
+       "\n",
+       "   -4.739999999999999769e-01  -4.470000000000000084e-01  \\\n",
+       "0                      0.129                      0.427   \n",
+       "1                     -1.250                     -1.200   \n",
+       "2                     -0.531                     -0.394   \n",
+       "3                     -1.110                     -1.090   \n",
+       "4                     -0.546                     -0.527   \n",
+       "\n",
+       "             ...             9.250000000000000444e-01  \\\n",
+       "0            ...                               -0.593   \n",
+       "1            ...                               -0.816   \n",
+       "2            ...                                0.634   \n",
+       "3            ...                               -0.640   \n",
+       "4            ...                               -0.277   \n",
+       "\n",
+       "   5.160000000000000142e-01  3.439999999999999725e-01  \\\n",
+       "0                     0.452                   0.00785   \n",
+       "1                     1.570                   0.39400   \n",
+       "2                     0.111                   0.37100   \n",
+       "3                     0.485                   0.29500   \n",
+       "4                     0.699                   0.37100   \n",
+       "\n",
+       "   9.060000000000000275e-01  -1.129999999999999893e+00  \\\n",
+       "0                    -0.533                    -0.0789   \n",
+       "1                     1.340                    -1.1800   \n",
+       "2                     0.859                    -0.9930   \n",
+       "3                     0.403                    -1.1200   \n",
+       "4                     0.481                    -1.0600   \n",
+       "\n",
+       "   -5.520000000000000462e-01  5.530000000000000471e-01  \\\n",
+       "0                      0.705                     0.906   \n",
+       "1                     -2.700                    -0.926   \n",
+       "2                     -0.492                     0.363   \n",
+       "3                     -0.343                     0.468   \n",
+       "4                     -0.526                     0.550   \n",
+       "\n",
+       "   -4.169999999999999818e-01  2.560000000000000053e-01  \\\n",
+       "0                      0.216                   -0.0723   \n",
+       "1                     -2.650                   -0.0447   \n",
+       "2                      0.326                   -0.0528   \n",
+       "3                     -0.820                    0.4350   \n",
+       "4                     -0.284                    0.1550   \n",
+       "\n",
+       "   0.000000000000000000e+00  \n",
+       "0                       0.0  \n",
+       "1                       0.0  \n",
+       "2                       0.0  \n",
+       "3                       0.0  \n",
+       "4                       0.0  \n",
+       "\n",
+       "[5 rows x 118 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(9001)\n",
+    "df = pd.read_csv('hw6_dataset.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((51822, 117), (51822,), (17275, 117), (17275,))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = df.iloc[:, :-1]\n",
+    "y = df.iloc[:, -1]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "X_train.shape, y_train.shape, X_test.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.995253256151\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg_Cs = np.hstack((10.**np.arange(-5, 0), 10**np.arange(0, 6)))\n",
+    "\n",
+    "logit = LogisticRegressionCV(reg_Cs, cv=5)\n",
+    "logit.fit(X_train, y_train)\n",
+    "print(\"Logistic regression classifier on test set has accuracy:\", logit.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A classifier that predicts 'normal' (label 0) on all patients has accuracy: 0.994674384949\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test.values\n",
+    "test_zeros = (y_test.values == 0).sum()\n",
+    "test_ones = (y_test.values == 1).sum()\n",
+    "test_total = y_test.values.shape[0]\n",
+    "# test_zeros, test_ones, test_zeros+test_ones, test_total\n",
+    "all_zero_accuracy = test_zeros/test_total\n",
+    "print(\"A classifier that predicts 'normal' (label 0) on patients in the test set has accuracy:\", all_zero_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Answer:\n",
+    "### 2.A. How does the fitted model compare with a classifier that predicts 'normal' (label 0) on all patients?\n",
+    "- Using logistic regression, we get accuracy score on test set 99.53%, whereas using a \"zero for all\" classifier, we get test score of 99.47%.\n",
+    "- We can see that these two scores are very close.\n",
+    "\n",
+    "### 2.B. Do you think the difference in the classification accuracies are large enough to declare logistic regression as a better classifier than the all 0's classifier? Why or why not?\n",
+    "- No, the difference between the classification accuracies are not large at all. So we cannot declare logistic regression is a better classfier than the all 0's classfier, if we only look at the two scores.\n",
+    "- This is because the dataset contains more than 69000 candidate ROIs, of which only 409 are malignant, while the remaining are all normal. So the ratio of people who does not have breast cancer is extremely higher than those with malignant tumor. The class labels are very imbalanced."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix for the fitted logistic regression classifier:\n",
+      "[[17181     2]\n",
+      " [   80    12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Confusion matrix for the fitted logistic regression classifier:\")\n",
+    "print(confusion_matrix(y_test,logit.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix for the all-zero classifier:\n",
+      "[[17183     0]\n",
+      " [   92     0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_zero_confusion = np.array([[test_zeros, 0], [test_ones, 0]])\n",
+    "print(\"Confusion matrix for the all-zero classifier:\")\n",
+    "print(all_zero_confusion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Answer:\n",
+    "### 4. Using the entries of the confusion table compute the true positive rate and the true negative rate for the two classifiers. Explain what these evaluation metrics mean for the specific task of cancer detection. Based on the observed metrics, comment on whether the fitted model is better than the all 0's classifier.\n",
+    "\n",
+    "#### Logistic Regression Classifier:\n",
+    "- True Positive Rate = $\\frac{TP}{TP+FN} = \\frac{12}{12+80} = 13.04\\%$\n",
+    "- True Negative Rate = $\\frac{TN}{TN+FP} = \\frac{17181}{17181+2} = 99.99\\%$\n",
+    "\n",
+    "#### All-zero Classifier:\n",
+    "- True Positive Rate = $\\frac{TP}{TP+FN} = \\frac{0}{92+0} = 0\\%$\n",
+    "- True Negative Rate = $\\frac{TN}{TN+FP} = \\frac{17183}{17183+0} = 100\\%$\n",
+    "\n",
+    "- True positive rate measures the proportion of positives that are correctly identified as such. In this case, true positive rate means the percentage of people with breast cancer who are correctly identified as having the condition.\n",
+    "- True negative rate measures the proportion of negatives that are correctly identified as such. In this case, true negative rate means the percentage of healthy people who are correctly identified as not having breast cancer.\n",
+    "\n",
+    "- In this medical test condition, higher true positive rate is more important, because then we will be less likely to miss people who has breast cancer by telling them everything is fine. \n",
+    "- Since all-zero classifier tells everybody that they are healthy, it is very useless in this medical area. \n",
+    "- Therefore, the fitted logistic regression model is better thant the all 0's classifier.\n",
+    "\n",
+    "### 5. What is the false positive rate of the fitted classifier, and how is it related to its true positive and true negative rate? Why is a classifier with high false positive rate undesirable for a cancer detection task?\n"
    ]
   },
   {
