hw6 problem 3 in progress

--- a/cs109a_hw6_submission.ipynb
+++ b/cs109a_hw6_submission.ipynb
@@ -689,20 +689,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The area under the ROC curve for the fitted logistic classifier is: 0.945496560048\n"
+      "The area under the ROC curve for the fitted logistic classifier is: 0.945496560048\n",
+      "The area under the ROC curve for the all 0's classifier is: 0.5\n"
      ]
     }
    ],
    "source": [
     "logit_auc = roc_auc_score(y_test, logit.predict_proba(X_test)[:,1])\n",
-    "print(\"The area under the ROC curve for the fitted logistic classifier is:\", logit_auc)"
+    "print(\"The area under the ROC curve for the fitted logistic classifier is:\", logit_auc)\n",
+    "print(\"The area under the ROC curve for the all 0's classifier is: 0.5\")"
    ]
   },
   {
@@ -723,6 +725,71 @@
     "3. Again restart with a fresh copy of the data in `hw6_dataset_missing.csv` and impute the missing data via a model-based imputation method. Once again split the data 75-25 and fit the regularized logistic regression model.  Report the overall classification rate and TPR in the test set.  \n",
     "4. Compare the results in the 3 previous parts of this problem.  Prepare a paragraph (5-6 sentences) discussing the results, the computational complexity of the methods, and conjecture and explain why you get the results that you see.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24999, 118)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = pd.read_csv('HW6_dataset_missing.csv', index_col=0)\n",
+    "df2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1436, 118)"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df2.dropna(axis=0)\n",
+    "df2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1077, 117), (1077,), (359, 117), (359,))"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X2 = df2.iloc[:, :-1]\n",
+    "y2 = df2.iloc[:, -1]\n",
+    "X_train2, X_test2, y_train2, y_test2 = train_test_split(X2, y2, test_size=0.25, random_state=42)\n",
+    "X_train2.shape, y_train2.shape, X_test2.shape, y_test2.shape"
    ]
   },
   {
