hw6 no need to normalize

--- a/Solutions/cs109_hw5_solutions.ipynb
+++ b/Solutions/cs109_hw5_solutions.ipynb
@@ -1279,7 +1279,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "logregpcacv = LogisticRegression(C=100000, fit_intercept=True)\n",
@@ -1568,9 +1570,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py36]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py36-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1582,7 +1584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
