hw7 in progress

--- a/cs109a_hw6_submission.ipynb
+++ b/cs109a_hw6_submission.ipynb
@@ -962,6 +962,7 @@
     }
    ],
    "source": [
+    "# make_roc function from lab 7\n",
     "def make_roc(name, clf, ytest, xtest, ax=None, labe=5, proba=True, skip=0):\n",
     "    initial=False\n",
     "    if not ax:\n",
