--- a/Solutions/cs109a_hw4_solutions_PO.ipynb
+++ b/Solutions/cs109a_hw4_solutions_PO.ipynb
@@ -5597,9 +5597,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py36]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py36-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5611,7 +5611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
