hw7 in progress

--- a/cs109a_hw7_submission.ipynb
+++ b/cs109a_hw7_submission.ipynb
@@ -66,8 +66,7 @@
     "\n",
     "import statsmodels.api as sm\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.model_selection import LeaveOneOut\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import LeaveOneOut"
    ]
   },
   {
@@ -532,7 +531,7 @@
     "LDA = LinearDiscriminantAnalysis()\n",
     "model_LDA = LDA.fit(X_train, y_train)\n",
     "print(\"LDA on train set has accuracy:\", model_LDA.score(X_train, y_train))\n",
-    "print(\"LDA on test set has accuracy:\", model_LDA.score(X_train, y_train))"
+    "print(\"LDA on test set has accuracy:\", model_LDA.score(X_test, y_test))"
    ]
   },
   {
@@ -559,15 +558,12 @@
     }
    ],
    "source": [
-    "loo = LeaveOneOut()\n",
     "lda = LinearDiscriminantAnalysis()\n",
     "\n",
     "train_scores = []\n",
     "valid_scores = []\n",
     "\n",
     "for itrain, ivalid in KFold(n_splits=5, shuffle=True, random_state=9001).split(X_train.index):\n",
-    "    # in general though its good for creating consistent psets, don't put seeds into kfold\n",
-    "    # split\n",
     "    X_train_cv = X_train.iloc[itrain,:]\n",
     "    y_train_cv = y_train.iloc[itrain]\n",
     "    X_valid_cv = X_train.iloc[ivalid,:]\n",
@@ -623,13 +619,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train score with k from 1 to 50:\n",
+      "[ 0.97548931  0.9092442   0.92890696  0.9166215   0.92152966  0.88467329\n",
+      "  0.88958145  0.87976513  0.88964167  0.88476363  0.87979524  0.87735622\n",
+      "  0.88229449  0.85284553  0.85284553  0.82351701  0.83574225  0.81613972\n",
+      "  0.82107799  0.79891599  0.79891599  0.79400783  0.79153869  0.79397772\n",
+      "  0.79644685  0.74504667  0.74504667  0.73041253  0.73041253  0.72059621\n",
+      "  0.72059621  0.71571816  0.71571816  0.71571816  0.71571816  0.71571816\n",
+      "  0.71571816  0.71571816  0.71571816  0.71571816  0.71571816  0.71571816\n",
+      "  0.71571816  0.71571816  0.71571816  0.71571816  0.71571816  0.71571816\n",
+      "  0.71571816]\n",
+      "valid score with k from 1 to 50:\n",
+      "[ 0.86238095  0.84238095  0.91095238  0.87190476  0.86142857  0.81238095\n",
+      "  0.84142857  0.83190476  0.88095238  0.80333333  0.83238095  0.81333333\n",
+      "  0.82333333  0.80333333  0.82285714  0.80285714  0.81285714  0.80285714\n",
+      "  0.81285714  0.78380952  0.78380952  0.7647619   0.7647619   0.72571429\n",
+      "  0.72571429  0.71619048  0.71619048  0.71619048  0.71619048  0.71619048\n",
+      "  0.71619048  0.71619048  0.71619048  0.71619048  0.71619048  0.71619048\n",
+      "  0.71619048  0.71619048  0.71619048  0.71619048  0.71619048  0.71619048\n",
+      "  0.71619048  0.71619048  0.71619048  0.71619048  0.71619048  0.71619048\n",
+      "  0.71619048]\n",
+      "best choice of k is: 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# k-Nearest Neighbors"
+    "# k-Nearest Neighbors\n",
+    "train_scores = []\n",
+    "valid_scores = []\n",
+    "\n",
+    "for itrain, ivalid in KFold(n_splits=5, shuffle=True, random_state=9001).split(X_train.index):\n",
+    "    X_train_cv = X_train.iloc[itrain,:]\n",
+    "    y_train_cv = y_train.iloc[itrain]\n",
+    "    X_valid_cv = X_train.iloc[ivalid,:]\n",
+    "    y_valid_cv = y_train.iloc[ivalid]\n",
+    "    train_score = []\n",
+    "    valid_score = []\n",
+    "    \n",
+    "    for i in range(1,50):\n",
+    "        knn_i = KNeighborsClassifier(i)\n",
+    "        knn_i.fit(X_train_cv, y_train_cv)\n",
+    "        train_score.append(knn_i.score(X_train_cv, y_train_cv))\n",
+    "        valid_score.append(knn_i.score(X_valid_cv, y_valid_cv))\n",
+    "    train_scores.append(train_score)\n",
+    "    valid_scores.append(valid_score)\n",
+    "\n",
+    "train_scores = np.array(train_scores)\n",
+    "print(\"train score with k from 1 to 50:\")\n",
+    "print(np.mean(train_scores, axis=0))\n",
+    "valid_scores = np.array(valid_scores)\n",
+    "print(\"valid score with k from 1 to 50:\")\n",
+    "print(np.mean(valid_scores, axis=0))\n",
+    "best_k = np.argmax(np.mean(valid_scores, axis=0)) + 1\n",
+    "print(\"best choice of k is:\", best_k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn with k=3 on train set has accuracy: 0.93137254902\n",
+      "knn with k=3 on test set has accuracy: 0.867256637168\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn3 = KNeighborsClassifier(3)\n",
+    "knn3.fit(X_train, y_train)\n",
+    "print(\"knn with k=3 on train set has accuracy:\", knn3.score(X_train, y_train))\n",
+    "print(\"knn with k=3 on test set has accuracy:\", knn3.score(X_test, y_test))"
    ]
   },
   {
