--- a/cs109a_hw7_submission.ipynb
+++ b/cs109a_hw7_submission.ipynb
@@ -1511,13 +1511,13 @@
    "source": [
     "|   | Classification performance (test set) | Complexity of decision boundary | Memory storage | Ease of interpretability |\n",
     "|---|---|---|----------|\n",
-    "|Linear Logistic Regression (multinomial) | 0.885 | 3 | 0 | 0 | \n",
-    "|Linear Logistic Regression (OvR) | 0.841 | 3 | 0 | 0 |\n",
-    "|Logistic Regression with Polynomial Terms | 0.885 | 4 | 0 | 0 |\n",
-    "|LDA | 0.832 | 3 | 0 | 0 |\n",
-    "|QDA | 0.850 | 4 | 0 | 0 |\n",
-    "|k-NN with k=3 | 0.867 | 5 |0 | 3 |\n",
-    "|Decision Tree with depth=2 | 0.876 | 1 | 0 | 1 |\n",
+    "|Linear Logistic Regression (multinomial)  | 0.885 | 3 | 3 | 3 | \n",
+    "|Linear Logistic Regression (OvR)          | 0.841 | 3 | 3 | 3 |\n",
+    "|Logistic Regression with Polynomial Terms | 0.885 | 4 | 3 | 4 |\n",
+    "|LDA                                       | 0.832 | 3 | 2 | 4 |\n",
+    "|QDA                                       | 0.850 | 4 | 2 | 5 |\n",
+    "|k-NN with k=3                             | 0.867 | 5 | 5 | 2 |\n",
+    "|Decision Tree with depth=2                | 0.876 | 1 | 2 | 1 |\n",
     "\n",
     "\n",
     "- Complexity of decision boundary: a scale from 1 to 5, where 1 means not complex and 5 means very complex.\n",
@@ -1531,7 +1531,8 @@
    "source": [
     "## Answer:\n",
     "### 2. If you were a clinician who had to use the classifier to diagnose thyroid disorders in patients, which among the six methods would you be most comfortable in using?\n",
-    "-"
+    "- I would recommend using a decision tree model with depth=2, because it not only gives a high accuracy score, it is also very easy to interpret since the tree can be visualiezed. Moreover, the cost of using the decision tree to predict data is logarithmic in the number of data points used to train the tree, as indicated in the scikit-learn introduction. \n",
+    "- For a medical classification problem like this one, it is quite common to use decision tree in real life. A medical report such as a physical exam report usually lists every indicator and compares them to a threshold, which is the basic idea of the decision tree. So using the decision tree in this multiclass thyroid classification, we compare two biomarkers to threshold values, which I think is very easy to understand both for doctors and patients."
    ]
   },
   {
