--- a/cs109a_hw8_submission.ipynb
+++ b/cs109a_hw8_submission.ipynb
@@ -1861,6 +1861,96 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import VotingClassifier\n",
+    "models_tuple = []\n",
+    "for i, model in enumerate(models):\n",
+    "    model_tuple = (\"model_\" + str(i), model)\n",
+    "    models_tuple.append(model_tuple)\n",
+    "# models_tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5000, 28)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 28)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "majority_vote = VotingClassifier(models_tuple, voting='hard')\n",
+    "\n",
+    "majority_vote.fit(X_train, y_train)\n",
+    "# majority_score = majority_vote.score(X_test, y_test)\n",
+    "# majority_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.37681574, -1.58372736, -1.70755196, ...,  0.96480882,\n",
+       "         1.30999136,  1.0832032 ],\n",
+       "       [ 0.70733017,  0.08760304, -0.39974162, ...,  2.21577978,\n",
+       "         1.18958616,  0.93797588],\n",
+       "       [ 0.61728966,  0.26583931, -1.34522748, ...,  1.3710804 ,\n",
+       "         0.98167187,  0.91743588],\n",
+       "       ..., \n",
+       "       [ 1.6095649 ,  0.43238798, -0.11620695, ...,  0.47203371,\n",
+       "         0.77459651,  0.69834638],\n",
+       "       [ 1.52757692, -0.47535092,  0.24122638, ...,  0.84126264,\n",
+       "         1.05054927,  0.88093102],\n",
+       "       [ 0.77687359,  0.90963268,  0.8277148 , ...,  0.8123849 ,\n",
+       "         0.85821187,  0.87750149]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_vote"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
