hw8 meta unsure but done

--- a/cs109a_hw8_submission.ipynb
+++ b/cs109a_hw8_submission.ipynb
@@ -1840,14 +1840,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The majority classifier gives test performance of  0.6646\n"
+      "The majority classifier gives test performance of 0.6646\n"
      ]
     }
    ],
@@ -1857,97 +1857,7 @@
     "correct_test_major = sum(1 for x in diff_test_major if x == 0)\n",
     "N = len(test_true)\n",
     "score_test_major = correct_test_major / N\n",
-    "print(\"The majority classifier gives test performance of \", score_test_major)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import VotingClassifier\n",
-    "models_tuple = []\n",
-    "for i, model in enumerate(models):\n",
-    "    model_tuple = (\"model_\" + str(i), model)\n",
-    "    models_tuple.append(model_tuple)\n",
-    "# models_tuple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5000, 28)"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 28)"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "majority_vote = VotingClassifier(models_tuple, voting='hard')\n",
-    "\n",
-    "majority_vote.fit(X_train, y_train)\n",
-    "# majority_score = majority_vote.score(X_test, y_test)\n",
-    "# majority_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.37681574, -1.58372736, -1.70755196, ...,  0.96480882,\n",
-       "         1.30999136,  1.0832032 ],\n",
-       "       [ 0.70733017,  0.08760304, -0.39974162, ...,  2.21577978,\n",
-       "         1.18958616,  0.93797588],\n",
-       "       [ 0.61728966,  0.26583931, -1.34522748, ...,  1.3710804 ,\n",
-       "         0.98167187,  0.91743588],\n",
-       "       ..., \n",
-       "       [ 1.6095649 ,  0.43238798, -0.11620695, ...,  0.47203371,\n",
-       "         0.77459651,  0.69834638],\n",
-       "       [ 1.52757692, -0.47535092,  0.24122638, ...,  0.84126264,\n",
-       "         1.05054927,  0.88093102],\n",
-       "       [ 0.77687359,  0.90963268,  0.8277148 , ...,  0.8123849 ,\n",
-       "         0.85821187,  0.87750149]])"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train_vote"
+    "print(\"The majority classifier gives test performance of\", score_test_major)"
    ]
   },
   {
@@ -1955,6 +1865,76 @@
    "metadata": {},
    "source": [
     "#### Meta-Classifier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models_scores = []\n",
+    "for i in range(100):\n",
+    "    models_scores.append(models[i].score(X_train, y_train))\n",
+    "sum_scores = sum(models_scores)\n",
+    "for n, score in enumerate(models_scores):\n",
+    "    models_scores[n] = score/sum_scores\n",
+    "# models_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meta = []\n",
+    "for i, score in enumerate(models_scores):\n",
+    "    meta.append(models[i].predict(X_test) * score)\n",
+    "meta_array = np.asarray(meta)\n",
+    "weighted_result = np.sum(meta_array, axis=0)\n",
+    "# weighted_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold_result = weighted_result\n",
+    "threshold_result[threshold_result < 0.5] = 0\n",
+    "threshold_result[threshold_result > 0.5] = 1\n",
+    "# threshold_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The meta-classifier gives test performance of 0.6658\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_true = y_test.tolist()\n",
+    "diff_test_meta = [a - b for a, b in zip(test_true, threshold_result)]\n",
+    "correct_test_meta = sum(1 for x in diff_test_meta if x == 0)\n",
+    "N = len(test_true)\n",
+    "score_test_meta = correct_test_meta / N\n",
+    "print(\"The meta-classifier gives test performance of\", score_test_meta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compare the test perfomance of your approach with the majority vote classifier. Explain your strategy/algorithm."
    ]
   },
   {
